# Launcher-Velopack-Tests

./: .gitignore  CMakeLists.txt  Launcher-Velopack-Tests-1.0.0-full.nupkg  Launcher-Velopack-Tests-1.0.4-delta.nupkg  Launcher-Velopack-Tests-1.0.6-delta.nupkg  Launcher-Velopack-Tests-1.0.6-full.nupkg  Launcher-Velopack-Tests-1.0.7-delta.nupkg  Launcher-Velopack-Tests-1.0.7-full.nupkg  Launcher-Velopack-Tests-1.0.8-full.nupkg  Launcher-Velopack-Tests-1.1.7-delta.nupkg  Launcher-Velopack-Tests-1.1.7-full.nupkg  MyId-1.0.0-full.nupkg  MyId-1.0.1-delta.nupkg  MyId-1.0.1-full.nupkg  MyId-1.0.2-delta.nupkg  MyId-1.0.2-full.nupkg  MyId-1.0.3-delta.nupkg  MyId-1.0.3-full.nupkg  README.md  RELEASES  assets.win.json  main.cpp  releases.win.json  vpk.toml
.github/workflows/: release.yml
Releases/: Launcher-Velopack-Tests-1.0.4-full.nupkg  Launcher-Velopack-Tests-1.0.8-delta.nupkg  RELEASES  assets.win.json  releases.win.json
User data/: debug_options_cool.json  debug_options_launcher.json  imgui.ini  last_session.json  user_settings_launcher.json
User data/Projects/: Untitled(0).coollab  Untitled(1).coollab  Untitled(10).coollab  Untitled(11).coollab  Untitled(12).coollab  Untitled(13).coollab  Untitled(14).coollab  Untitled(15).coollab  Untitled(16).coollab  Untitled(2).coollab  Untitled(3).coollab  Untitled(4).coollab  Untitled(5).coollab  Untitled(6).coollab  Untitled(7).coollab  Untitled(8).coollab  Untitled(9).coollab  Untitled.coollab
velopack/lib/: velopack_libc_win_arm64_msvc.dll.lib  velopack_libc_win_x64_msvc.dll.lib  velopack_libc_win_x86_msvc.dll.lib
(+25 files in other folders)
